--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,7 +35,7 @@
 
         <p class="has-text-centered mt-2">Or</p>
 
-        <div class="columns has-text-centered">
+        <div class="has-text-centered">
           <%= render "devise/shared/links"%>
         </div>
 
